apps/jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
    version: v0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
      version: v0
  template:
    metadata:
      labels:
        app: jenkins
        version: v0
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - name: jenkins
          mountPath: /var/jenkins_home
        ports:
        - containerPort: 8080
          name: jenkins
        - containerPort: 50000
          name: jnlp
        imagePullPolicy: Always
      volumes:
      - name: jenkins
        persistentVolumeClaim:
          claimName: jenkins
