apps/jenkins/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
    kubernetes.io/name: "jenkins"
spec:
  selector:
    app: jenkins
  ports:
  - name: jenkins
    port: 80
    targetPort: 8080
  - name: jnlp
    port: 50000
    targetPort: 50000
  type: ClusterIP
