apps/jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    cert-manager.io/issuer: ca-kubernetes-issuer
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - jenkins.explorer
    secretName: jenkins-cert
  rules:
  - host: jenkins.explorer
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80
